# Teste-MCP

./: Dockerfile  README.md  app.ipynb  main.py  pyproject.toml  server.py  webScraper.py  webScraper_server.py
